test/sema/trait_objects/trait_object_invalid_generic_trait.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

trait Foo<T : A> {
  fn foo(self: borrowed Self) {}
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:20: error: cannot satisfy constraint 'number : A'
  let x: *impl Foo<number>;

  // CHECK: [[# @LINE + 1 ]]:3: error: symbol 'x' not found
  x.foo();
}
